--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,7 @@
-@import "modal";
-@import "tooltip";
+table {
+  border-collapse: collapse;
+  width: 100%;
+  th, td {
+    border: 1px solid #aaaaaa;
+  }
+}
